force-app/main/default/objects/WorkStatement__c/WorkStatement__c.object-meta.xml
<CustomObject>
    <label>WorkStatement</label>
    <nameField>
        <label>WorkStatement  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkStatements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>