force-app/main/default/objects/WorkStatement__c/fields/Signer__c.field-meta.xml
<CustomField>
    <fullName>Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signer</label>
    <referenceTo>ClientManager__c</referenceTo>
    <relationshipLabel>WorkStatements</relationshipLabel>
    <relationshipName>WorkStatements</relationshipName>
    <type>Lookup</type>
</CustomField>